<resources>
    <string name="app_name">SafeLauncher</string>
    <string name="preference_file_key">SafeLauncherPreferenceFileKey</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings_title">Impostazioni</string>
    <string name="example_text_view_name">Sabato 30 Gennaio 2023</string>
    <string name="example_text_view_clock">12 : 34</string>
    <string name="default_text_view_contact">Aldo</string>
    <string name="call_button">Chiama</string>
    <string name="back">Indietro</string>
    <string name="default_text_view_widget">Widget</string>
    <string name="impostazioni_default_title">Impostazioni</string>
    <string name="settings_contatti_title">Contatti</string>
    <string name="settings_contatti_colonne_label">Numero di Colonne</string>
    <string name="settings_contatti_colonne_placeholder">3 Colonne</string>

    <string name="settings_contatti_colonne_helperText">3 cols</string>
    <string name="settings_widgets_righe_helperText">2 righe</string>
    <string name="settings_widgets_colonne_helperText">3 cols</string>

    <string name="settings_widgets_title">Widgets</string>

    <string name="settings_contatti_righe_label">Numero di Righe</string>
    <string name="settings_widgets_colonne_label">Numero di Colonne</string>
    <string name="settings_widgets_righe_label">Numero di Righe</string>
    <string name="btn_whatsapp_open_chat">Apri Chat</string>
    <string name="back_image">Indietro</string>
    <string name="settings_view_contact_title">Pagina Contatto</string>
    <string name="settings_view_contact_show_notifications_label">Mostra Noficiche</string>
    <string name="settings_view_contact_show_rapid_call_label">Mostra pulsante per Chiamata</string>
    <string name="settings_view_contact_show_rapid_chat_label">Mostra pulsante per Chat</string>
    <string name="settings_view_contact_rapid_chat_app_label">App per Chat</string>
    <string name="list_apps_search_hint">Ricerca una Applicazione</string>
    <string name="drawer_title">Applicazioni</string>
    <string name="list_title_pick">Scegli un\'App</string>
    <string name="list_title_view">Tutte le App</string>
    <string name="list_tab_app">Apps</string>
    <string name="list_tab_other">Altro</string>
    <string name="list_removed">Applicazione rimossa</string>
    <string name="list_not_removed">Impossibile rimuovere l\'applicazione</string>
    <string name="list_other_settings">Impostazioni Launcher</string>
    <string name="list_other_list">Tutte le App</string>
    <string name="settings_widgets_show_label">Mostra etichette</string>
    <string name="add">Aggiungi</string>
    <string name="settings_contacts_is_scrollable_label">Possibilità di scorrere</string>
    <string name="settings_widgets_is_scrollable_label">Possibilità di scorrere</string>
    <string name="settings_home_title">Home</string>
    <string name="settings_view_contact_buttons_direction_label">Pulsanti Orizzontali</string>
    <string name="settings_list_apps_title">Lista Applicazioni</string>
    <string name="settings_list_apps_display_view_label">Modalità di visualizzazione</string>
    <string name="settings_widgets_force_settings_label">Obbliga presenza Impostazioni</string>
    <string name="settings_widgets_force_apps_label">Obbliga presenza Apps</string>
    <string name="settings_home_require_password_for_settings_label">"Limita accesso Impostazioni "</string>
    <string name="write_password_to_auth">Digita la password per accedere alle impostazioni oppure premi il pulsante indietro</string>
    <string name="silenzioso">Silenzioso</string>
    <string name="mute">Silenzioso</string>
    <string name="unmute">Suono</string>
    <string name="notification_service_name">Gestore Notifiche</string>
    <string name="flash">Flash</string>
    <string name="settings_home_force_full_screen_label">Blocca l\'applicazione a Full Screen</string>

    <string-array name="settings_launcher_time_formats_upper">
        <item>yyyy-MM-dd</item>
        <item>HH:mm:ss</item>
        <item>HH:mm:ss</item>
        <item>HH:mm:ss</item>
        <item />
    </string-array>
    <string-array name="settings_launcher_time_formats_lower">
        <item>HH:mm:ss</item>
        <item>yyyy-MM-dd</item>
        <item />
        <item>dd.MM.yyyy</item>
        <item />
    </string-array>
    <string name="title_activity_request_full_scren">RequestFullScrenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="permesso_contatti_granted">Permission granted!</string>
    <string name="permesso_contatti_not_granted">Until you grant the permission, we cannot display the names</string>
    <string name="settings_home_set_as_preferred_launcher_text">Imposta come Launcher Predefinito</string>

    <string name="tutorial_contacts_description_text">Per garantire un funzionamento ottimale, è necessario avere accesso ai tuoi contatti. Ti preghiamo gentilmente di concederci l\'accesso in modo da poter offrire una migliore esperienza di utilizzo.</string>
    <string name="tutorial_full_screen_description_text">Per offrire un\'esperienza ottimale e garantire la massima fruibilità dell\'applicazione, ti chiediamo cortesemente di concederci il permesso di avviare l\'applicazione a schermo intero. Questo ci permetterà di ottimizzare l\'interfaccia e garantire una visualizzazione completa e coinvolgente delle funzionalità offerte.</string>
    <string name="tutorial_notification_policy_description_text">Per poter gestire il suono del dispositivo, ti chiediamo gentilmente di fornirci il permesso necessario. Attivando questa opzione, sarai in grado di impostare il dispositivo in modalità silenziosa durante i tuoi momenti personali.</string>
    <string name="tutorial_notification_access_description_text">Per poter visualizzare le notifiche che ricevi, richiediamo il tuo consenso. Ti invitiamo gentilmente a concederci il permesso. Attivando questa opzione, potrai visualizzare i messaggi e le chiamate direttamente sulla schermata principale.</string>
    <string name="tutorial_request_full_screen_button_text">Concedi il Permesso</string>
    <string name="tutorial_request_full_screen_back_button_text">Torna Indietro</string>

    <string name="vibration">Vibrazione</string>
    <string name="call">Chiama</string>
    <string name="settings_list_apps_open_keyboard_on_start_label">Mostra Tastiera all\'apertura</string>
    <string name="settings_list_apps_open_app_on_only_one_result_label">Avvia Applicazione se unico risultato</string>
    <string name="settings_fast_update_contacts_label">Aggiorna contatti velocemente</string>
</resources>