<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_launcher_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="32sp"
        android:paddingTop="16sp"
        android:paddingRight="32sp"
        tools:context=".settings.meta.SettingsFragmentMeta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_contacts_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_contacts_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_contatti_title"
                    android:textColor="@color/accent_color"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="16dp" />

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputFirst"
                android:hint="@string/app_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8sp">

                <TextView
                    android:id="@+id/settings_contacts_number_columns_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/settings_contatti_colonne_label"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/settings_contacts_number_columns_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/settings_contatti_colonne_helperText"
                    android:inputType="number"
                    android:textColorHint="#757575"
                    tools:ignore="LabelFor" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8sp">

                <TextView
                    android:id="@+id/settings_contacts_is_scrollable_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/settings_contatti_colonne_label"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/settings_contacts_is_scrollable_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_widgets_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_widgets_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_widgets_title"
                    android:textColor="@color/accent_color"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8sp">

                <TextView
                    android:id="@+id/settings_widgets_number_columns_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/settings_widgets_colonne_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/settings_widgets_number_columns_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/settings_widgets_colonne_helperText"
                    android:inputType="number" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8sp">

                <TextView
                    android:id="@+id/settings_widgets_number_rows_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/settings_widgets_righe_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/settings_widgets_number_rows_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/settings_widgets_righe_helperText"
                    android:inputType="number" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>